--- a/paginas/explorar.html
+++ b/paginas/explorar.html
@@ -1,37 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pinterest</title>
-    <link rel="stylesheet" href="explorar.css">
+    <link rel="stylesheet" href="crear.css">
 </head>
 <body>
-<!-- Pagina 2 -->
-<div class="navbar">
+    <div class="navbar">
+        <div class="nav-item"> <a href="/index.html"> <img src="/imagenes/home-removebg-preview.png" alt="Home"> </a> </div>
+        <div class="nav-item"> <a href="/paginas/explorar.html">  <img src="/imagenes/explorador2.png" alt="Explorar">  </a></div>
+        <div class="nav-item"> <a href="/paginas/crear.html">  <img src="/imagenes/anadir.png" alt="Crear"> </a>  </div>
+        <div class="nav-item" id="notifications"><img src="/imagenes/campana.png" alt="Actualizaciones">
+            <div class="dropdown" id="notificationsDropdown">
+                <h3>Actualizaciones</h3>
+                
+                <p>Contenido de mensajes</p>
 
-    <div class="nav-item"><a href="/index.html"> <img src="/imagenes/home-removebg-preview.png" alt="Home"> </a> </div>
-    <div class="nav-item"> <a href="/paginas/explorar.html">  <img src="/imagenes/explorador2.png" alt="Explorar">  </a></div>
-    <div class="nav-item"> <a href="/paginas/crear.html">  <img src="/imagenes/anadir.png" alt="Crear">  </a> </div>
-    <div class="nav-item" id="notifications"> <img src="/imagenes/campana.png" alt="Actualizaciones"> 
-         <div class="dropdown" id="notificationsDropdown">
-            <h3>Actualizaciones</h3>
-            <p>Contenido de mensajes</p>
-        </div>        
-    </div>
-
-    <div class="nav-item" id="messages"> <img src="/imagenes/mensajero.png" alt="Mensajes">  
-        <div class="dropdown" id="messagesDropdown">
-            <div class="up">
-                <img src="/imagenes/letra-x-removebg-preview.png" alt="Crear">
-                <h3>Mensajes</h3>
-                <img src="/imagenes/mas-removebg-preview.png" alt="Puntos">
             </div>
-            <p>Contenido de mensajes</p>
+
         </div>
+        <div class="nav-item" id="messages"> <img src="/imagenes/mensajero.png" alt="Mensajes">
+            <div class="dropdown" id="messagesDropdown">
+
+                <div class="up">
+                    <img src="/imagenes/letra-x-removebg-preview.png" alt="Crear">
+                    <h3>Mensajes</h3>
+                    <img src="/imagenes/mas-removebg-preview.png" alt="Puntos">
+                    
+                </div>
+                <p>Contenido de mensajes</p>
+
+            </div>
+        </div>
+        <div class="nav-item">  <img src="/imagenes/ajuste.png" alt="Ajuste">  </a> </div>
+
     </div>
-    <div class="nav-item">  <img src="/imagenes/ajuste.png" alt="Ajuste">  </a> </div>
-</div>
     <div class="up-bar">
         <div class="search-bar">
             <input type="text" placeholder="Buscar">
@@ -42,19 +47,20 @@
         </div>
     </div>
 
-    <div class="container" >
-        <img class="imagen"  src="https://i.pinimg.com/564x/cc/38/be/cc38bea22c3a985206125f18ac6f2610.jpg" alt="1" width="230px" height="">
-        <img class="imagen"  src="https://i.pinimg.com/control/564x/22/cf/8a/22cf8a16dc086bb5ebbc6870a58ce434.jpg" alt="2" width="230px" height="">
-        <img class="imagen"  src="https://i.pinimg.com/564x/91/d0/f4/91d0f4e0e49c69f3e9c9c37f53dc5cdd.jpg" alt="3" width="230px" height="">
-        <img class="imagen"  src="https://i.pinimg.com/736x/9c/7f/9f/9c7f9f218ce531019d56299cc4c93f16.jpg" alt="4" width="230px" height="">
-        <img class="imagen"  src="https://i.pinimg.com/control/564x/13/6d/6c/136d6ccd076b46d86a2dfcb30a04b6a5.jpg" alt="5" width="230px" height="">
-        <img class="imagen"  src="https://i.pinimg.com/control/564x/62/1c/45/621c45bff039f473e4ae3a2a855ebd9d.jpg" alt="6" width="230px" height="">
-        <img class="imagen"  src="https://i.pinimg.com/control/564x/49/77/bf/4977bf74187caf636defde266cb48530.jpg" alt="7" width="230px" height="">
-        <img class="imagen"  src="https://i.pinimg.com/736x/c5/81/74/c5817403c1706eb4ca0334e9254fc044.jpg" alt="8" width="230px" height="">
-        <img class="imagen"  src="https://i.pinimg.com/736x/e3/32/48/e33248b33613a97bddb8172ba334374c.jpg" alt="9" width="230px" height="">
+    <div class="container">
+        <img class="imagen"  src="https://i.pinimg.com/564x/e9/0f/a2/e90fa21e98ea79fe1c68f749bd8f94a4.jpg" alt="1" width="230px" height="">
+        <img class="imagen"  src="https://i.pinimg.com/736x/63/8f/5c/638f5cce7c26809ba12b49daf55d1abd.jpg" alt="2" width="230px" height="">
+        <img class="imagen"  src="https://i.pinimg.com/564x/e2/25/f7/e225f797ede901318497832a0229e9ce.jpg" alt="3" width="230px" height="">
+        <img class="imagen"  src="https://i.pinimg.com/control/564x/30/da/d2/30dad2f5d5923e7a7715fe25ea590d35.jpg" alt="4" width="230px" height="">
+        <img class="imagen"  src="https://i.pinimg.com/control/564x/7b/59/7a/7b597a91336b0f3577ffcca815e99129.jpg" alt="5" width="230px" height="">
+        <img class="imagen"  src="https://i.pinimg.com/control/564x/d2/24/e1/d224e1843537f5247abca31518e6c513.jpg" alt="6" width="230px" height="">
+        <img class="imagen"  src="https://i.pinimg.com/control/564x/e9/0c/ed/e90ced0160999ca0e1f4a976a032a677.jpg" alt="7" width="230px" height="">
+        <img class="imagen"  src="https://i.pinimg.com/564x/aa/45/1f/aa451fdd6dcb956ae1cf95d5c8ad63dd.jpg" alt="8" width="230px" height="">
+        <img class="imagen"  src="https://i.pinimg.com/736x/c0/32/ad/c032ad6e6a1a9f11ab639fe863cb9fc7.jpg" alt="9" width="230px" height="">
         <img class="imagen"  src="https://i.pinimg.com/736x/47/44/bc/4744bc270497dc27b7b7fd5acea9d056.jpg" alt="10" width="230px" height="">
-
     </div>
     <script src="explorar.js"></script>
+
+
 </body>
 </html>
